--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "pl.droidsonroids.app"
+        applicationId "pl.droidsonroids.fluttergithub"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
